# storage/api-docs/api-docs.json
@@ -670,13 +670,60 @@
                 }
             }
         },
+        "/communities/materials": {
+            "get": {
+                "tags": [
+                    "Materials"
+                ],
+                "description": "Cuando un usuario realiza o actualiza una pedido a una comunidad",
+                "operationId": "App\\Http\\Controllers\\MaterialsRequestController::get",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "uuid_community": {
+                                        "description": "Community",
+                                        "type": "string"
+                                    },
+                                    "uuid_piece": {
+                                        "description": "Piece",
+                                        "type": "string"
+                                    },
+                                    "units": {
+                                        "description": "",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": ""
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/communities/materials/add-or-update": {
             "post": {
                 "tags": [
                     "Materials"
                 ],
                 "description": "Cuando un usuario realiza o actualiza una pedido a una comunidad",
-                "operationId": "App\\Http\\Controllers\\MaterialsRequestController::add",
+                "operationId": "App\\Http\\Controllers\\MaterialsRequestController::addOrupdate",
                 "requestBody": {
                     "required": true,
                     "content": {
